# MotionPrediction_Project

./: README.md
Motion_Prediction/: .gitignore  README.md
Motion_Prediction/OGRE/: OgreConfigPaths.h  OgreExports.h  OgreGLSupportPrerequisites.h  OgreOctreePrerequisites.h  OgreOctreeZonePrerequisites.h  OgreRTShaderExports.h
Motion_Prediction/OgreSDK/lib/macosx/Release/: DefaultSamples.dylib
Motion_Prediction/intel_mac/OGRE/: OgreAssimpExports.h  OgreBuildSettings.h  OgreComponents.h  OgreConfigPaths.h  OgreGL3PlusExports.h  OgreVolumePrerequisites.h
Motion_Prediction/lua-5.1.5/etc/: .__vimsession
Motion_Prediction/lua-5.1.5/src/: CMakeLists.txt
Motion_Prediction/motion_prediction/: Resource  media13
Motion_Prediction/motion_prediction/lua/: QPbasedMuscleSim.lua  RagdollFallLCP2_spherical.lua  RagdollFallLCP_spherical.lua  testOsimLoader.lua  testOsimLoader_fixed.lua  testOsimSmpl.lua  test_deepmimic.lua  test_deepmimic_advanced.lua
Motion_Prediction/motion_prediction/lua/lib/: Bvh2Dof.lua  Lee2013MuscleDyn.lua  OsModel.lua  OsimParser.lua  OsimSmpl.lua  utilfunc.lua
Motion_Prediction/motion_prediction/lua/lib/IPC_based/: LocoGraph.lua  LocoSynthesis.lua  gymnist_roundoff.dof
Motion_Prediction/motion_prediction/lua/models/: MovingWindowOptimizerMPIMuscle.lua  MovingWindowOptimizerMuscle.lua  MovingWindowOptimizerSubroutines4Muscle.lua  batchcapture.lua  batchcapture_reference.lua  createInitialPendControlParamMuscle.lua  driverDynamicConsoleMuscle.lua  driverExtractPendTrajectoryMuscle.lua  driverIPCviewMuscle.lua  driverKinematicMuscle.lua  renderModels.lua  renderMuscleForce.lua  showMuscles.lua  showMuscles2.lua  testMem.lua  testmw.lua  useCaseMuscle_full_ipfrun_repeat.lua  useCaseMuscle_full_ipnrun_repeat.lua  useCaseMuscle_full_lean_repeat.lua  useCaseMuscle_full_same_repeat.lua  useCaseMuscle_full_sit_repeat.lua  useCaseMuscle_full_soldier_repeat.lua  useCaseMuscle_full_tong_repeat.lua  useCaseMuscle_gait1956_6steps.lua  useCaseMuscle_gait1956_gait_repeat.lua  useCaseMuscle_gait1956_soldier_repeat.lua  useCaseMuscle_gait1956_tong_repeat.lua  useCaseMuscle_gait1992_gait_repeat.lua  useCaseMuscle_gait1992_soldier_repeat.lua  useCaseMuscle_gait1992_tong_repeat.lua  useCasesMuscle.lua
Motion_Prediction/motion_prediction/lua/subRoutines/: MuscleSim.lua  OsimModel.lua  OsimModel_cpp.lua  PoseTransfer2.lua  retarget_common.lua
Motion_Prediction/motion_prediction/python/: bin_viewer.py  realtime_posetransfer.py  realtime_posetransfer2.py  showBinFile.py
Motion_Prediction/motion_prediction/python/ETRI_viewer/: config.json  emulation.py  etri_parser.py  evconfig.py  sensor_parser.py  utils.py
Motion_Prediction/motion_prediction/python/make_120_bvh/: bvh_120.py  hierarchy.py  make_bvh.py  optitrack_120_bvh.py  xsens_120_bvh.py
Motion_Prediction/motion_prediction/python/make_120_csv/: amti_120_csv.py  binary_120_csv.py  csv_120.py  delsys_120_csv.py  etri_120_csv.py  fmgmmg_120_csv.py  futek_120_csv.py  mono_camera_120_csv.py  optitrack_120_csv.py  softsensor_120_csv.py  xsens_120_csv.py
Motion_Prediction/motion_prediction/src/: CMakeLists.txt  Lee2013MuscleDyn.cpp  Lee2013MuscleDyn.h  MainlibPython.cpp  MainlibPython.h  Makefile  PythonExtendWin.cpp  PythonExtendWin.h  build.bat  build.lua  luna_QP.cpp  luna_QP.lua  main.cpp  main_standalone.cpp  requirements.txt  stdafx.h  tp
Motion_Prediction/motion_prediction/src/lib/: LocoSimMuscle.lua  OsimParser.lua  OsimSmpl.lua  QPservo2.lua
Motion_Prediction/motion_prediction/src/lib/IPC_based/: common.lua  justin_straight_run_gen.dof
Motion_Prediction/motion_prediction/src/v-hacd/: ConvexDecomp.cpp  ConvexDecomp.h  todo.wiki
Motion_Prediction/motion_prediction/src/v-hacd/3Dthinning/: itkBinaryThinningImageFilter3D.h
Motion_Prediction/motion_prediction/src/v-hacd/app/: VHACD.h
Motion_Prediction/motion_prediction/work/: Makefile  README.wiki  _temp.skl  config.lua  controlmodule.py  evaluation.py  filechooser_wx.py  luamodule.py  play_mp.py  rendermodule.py  run.bat  test_sample_python.py  train_hand_model.py  train_motionprediction.py  train_motionprediction_dif16.py  train_motionprediction_vae.py  train_mp_vavae.py  train_mp_vqvae_CNN.py  train_mp_vqvae_Categorical.py
Motion_Prediction/motion_prediction/work/config/: ACT_net.json  STAR.json  deep_net.json  dif_14.json  dif_belfusion.json  dif_gan.json  dif_multi.json  dif_multi_frame_vec.json  dif_multi_n_attn.json  dif_multi_pose_vec.json  dif_normal.json  dif_point_vec.json  dif_pose_vec.json  dif_pose_vec24.json  dif_pose_vec_predict.json  dif_posetransfer.json  dif_trans_dit.json  dif_trans_vec.json  eq.json  transfusion.json  vqvae2.json  vqvae_lto.json  vqvae_posetransfer .json  vqvae_posetransfer.json  vqvaecategorycal.json  vqvaecnn.json
Motion_Prediction/motion_prediction/work/gym_gang/: distributions.py  envs.py  gang_lib.lua  model.py  model_advanced.py
Motion_Prediction/motion_prediction/work/gym_mp/: MP_NA.lua  MP_NA2.lua  MP_tuna.lua  MP_tuna2.lua  MP_tuna_category.lua  MP_tuna_vqvae2.lua  MotionPrediction_env_ae.lua  MotionPrediction_env_vae.lua  MotionPrediction_env_vqvae.lua  PDservo.lua  PDservo_spd.lua  __init__.py  config_transfer.lua  dif_test_10.lua  distributions.py  envs.py  hand_env.lua  luaEnv.py  models.py  models2.py  mvae-v0.lua  realtimePose2.lua  realtimePoseTransfer.lua  render_hanyangmodel.lua  retarget_config.lua  utils.py  vae_test_10.lua
Motion_Prediction/motion_prediction/work/gym_mp/algo/: a2c_acktr.py  kfac.py  luamodule_RL.py
Motion_Prediction/motion_prediction/work/gym_mp/references/: Stitch_walk.dof  hyunwoo_lowdof_T_boxfoot_parable.wrl  hyunwoo_lowdof_T_boxfoot_parable_fight1_subject3.dof  hyunwoo_lowdof_T_boxfoot_parable_walk2_subject1.dof  hyunwoo_lowdof_T_boxfoot_parable_walk2_subject4.dof  hyunwoo_lowdof_T_boxfoot_parable_walk3_subject1.dof  hyunwoo_lowdof_T_boxfoot_parable_walk3_subject3.dof  (+6 more)
Motion_Prediction/motion_prediction/work/trained_models/: MotionPrediction.pt  dif16_vec.pt  hand_model.pt  motionprediction1.pt  simplevqvae-cnnbasedfix.pt  vae_model_10.pt  vae_model_10_done.pt
(+139 files in other folders)
